--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": {
     "name": "Hein Rutjes <hrutjes@gmail.com>"
   },
-  "description": "Flexible & plugable layout-controller for famo.us",
+  "description": "Flexible, animated and plugable layout-controller for famo.us",
   "keywords": [
     "famo.us",
     "famous",
