--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
   "authors": [
     "Hein Rutjes <hrutjes@gmail.com>"
   ],
-  "description": "Flexible & plugable layout-controller for famo.us",
+  "description": "Flexible, animated and plugable layout-controller for famo.us",
   "keywords": [
     "famo.us",
     "famous",
