--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "famous-flex",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "homepage": "https://github.com/IjzerenHein/famous-flex",
   "repository": {
     "type": "git",
@@ -16,6 +16,7 @@
     "flex",
     "famous-flex",
     "layoutcontroller",
+    "flowlayoutcontroller",
     "flex-layoutcontroller"
   ],
   "licenses": [
