--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "famous-flex",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "homepage": "https://github.com/IjzerenHein/famous-flex",
   "repository": {
     "type": "git",
-    "url": "https://github.com/IjzerenHein/famous-flex.git"
+    "url": "git://github.com/IjzerenHein/famous-flex.git"
   },
   "authors": [
     "Hein Rutjes <hrutjes@gmail.com>"
@@ -16,6 +16,7 @@
     "flex",
     "famous-flex",
     "layoutcontroller",
+    "flowlayoutcontroller",
     "flex-layoutcontroller"
   ],
   "license": "MIT",
