Support for browserify

--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "type": "git",
     "url": "git://github.com/IjzerenHein/famous-flex.git"
   },
+  "browserify": {
+    "transform": [
+      "deamdify",
+      "famousify",
+      "brfs"
+    ]
+  },
   "author": {
     "name": "Hein Rutjes <hrutjes@gmail.com>"
   },
@@ -35,6 +42,10 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "brfs": "latest",
+    "browserify": "latest",
+    "deamdify": "latest",
+    "famousify": "latest",
     "grunt": "latest",
     "grunt-eslint": "latest",
     "grunt-jscs": "latest",
