--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "famous-flex",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "homepage": "https://github.com/IjzerenHein/famous-flex",
   "repository": {
     "type": "git",
@@ -9,15 +9,14 @@
   "authors": [
     "Hein Rutjes <hrutjes@gmail.com>"
   ],
-  "description": "Flexible, animated and plugable layout-controller for famo.us",
+  "description": "Flexible and scrollable layout-controller for famo.us",
   "keywords": [
     "famo.us",
     "famous",
     "flex",
     "famous-flex",
     "layoutcontroller",
-    "flowlayoutcontroller",
-    "flex-layoutcontroller",
+    "scrolllayoutcontroller",
     "scrollview",
     "flex-scrollview"
   ],
