--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "famous-flex",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "https://github.com/IjzerenHein/famous-flex",
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
   "author": {
     "name": "Hein Rutjes <hrutjes@gmail.com>"
   },
-  "description": "Flexible and scrollable layout-controller for famo.us",
+  "description": "Flexible scrollview and layout-controller for famo.us",
   "keywords": [
     "famo.us",
     "famous",
