Renamed ScrollView to FlexScrollView

--- a/bower.json
+++ b/bower.json
@@ -15,9 +15,11 @@
     "famous",
     "flex",
     "famous-flex",
+    "famousflex",
     "layoutcontroller",
-    "scrolllayoutcontroller",
+    "scrollcontroller",
     "scrollview",
+    "flexscrollview",
     "flex-scrollview"
   ],
   "license": "MIT",
