--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "main": "src",
   "name": "famous-flex",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "homepage": "https://github.com/IjzerenHein/famous-flex",
   "repository": {
     "type": "git",
@@ -21,7 +21,10 @@
     "scrollcontroller",
     "scrollview",
     "flexscrollview",
-    "flex-scrollview"
+    "flex-scrollview",
+    "datewheel",
+    "datepicker",
+    "datetimepicker"
   ],
   "license": "MIT",
   "ignore": [
