Added new widgets roadmap section to README

--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "flex-scrollview",
     "datewheel",
     "datepicker",
-    "datetimepicker"
+    "datetimepicker",
+    "tabbar"
   ],
   "license": "MIT",
   "ignore": [
