--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "main": "src",
   "name": "famous-flex",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "homepage": "https://github.com/IjzerenHein/famous-flex",
   "repository": {
     "type": "git",
@@ -10,7 +10,7 @@
   "authors": [
     "Hein Rutjes <hrutjes@gmail.com>"
   ],
-  "description": "Flexible scrollview and layout-controller for famo.us",
+  "description": "Animatable layouts, FlexScrollView & widgets for famo.us",
   "keywords": [
     "famo.us",
     "famous",
@@ -25,7 +25,8 @@
     "datewheel",
     "datepicker",
     "datetimepicker",
-    "tabbar"
+    "tabbar",
+    "widgets"
   ],
   "license": "MIT",
   "ignore": [
