Enabled usage in Bower/CommonJS projects.
Removed package.json from bower.jsons ignore section to make "browserify-shim"-builds from the bower directory possible, as the "global-no-famous-template" is still missing from the npm module.

--- a/bower.json
+++ b/bower.json
@@ -37,8 +37,7 @@
     "examples",
     "docs",
     "Gruntfile.js",
-    "CONTRIBUTORS.md",
-    "package.json"
+    "CONTRIBUTORS.md"
   ],
   "devDependencies": {
     "famous": "~0.3.4"
