Renamed browserify template to "famous-flex-global" to fit conventions, moved to "dist" folder and added the current build. Added a "main" section of bower.json pointing to this file.

--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,9 @@
     "Hein Rutjes <hrutjes@gmail.com>"
   ],
   "description": "Animatable layouts, FlexScrollView & widgets for famo.us",
+  "main": [
+    "dist/famous-flex-global.js"
+  ],
   "keywords": [
     "famo.us",
     "famous",
