--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "famousflex",
     "layoutcontroller",
     "scrollcontroller",
+    "animationcontroller",
     "scrollview",
     "flexscrollview",
     "flex-scrollview",
