--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "famousflex",
     "layoutcontroller",
     "scrollcontroller",
+    "animationcontroller",
     "scrollview",
     "flexscrollview",
     "flex-scrollview",
