Added missing deamdify dev dependency

--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
   "devDependencies": {
     "browserify": "^10.0.0",
     "browserify-shim": "^3.8.6",
+    "deamdify": "^0.1.1",
     "grunt": "latest",
     "grunt-banner": "^0.3.1",
     "grunt-browserify": "^3.8.0",
+    "grunt-contrib-csslint": "^0.4.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-csslint": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^6.0.0",
     "grunt-exec": "^0.4.6",
