--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "main": "src",
   "name": "famous-flex",
-  "version": "0.3.",
+  "version": "0.3.4",
   "homepage": "https://github.com/IjzerenHein/famous-flex",
   "repository": {
     "type": "git",
